crates/unsoundness_checker/tests/snapshots/invalid_overload_implementation/markdown_test__snippet_06.snap
---
source: crates/unsoundness_checker/tests/markdown_test.rs
expression: output
---
error[invalid-overload-implementation]: Invalid overload implementation can lead to runtime errors.
 --> snippet_06.py:8:5
  |
6 | def bar(x: str) -> int: ...
7 | def bar(x: int | str) -> list[str]:
8 |     return ["invalid"]
  |     ^^^^^^^^^^^^^^^^^^
  |
info: This overload implementation is invalid as `list[Unknown | str]` is not assignable to any of the overload return types (`str`, `int`)
info: rule `invalid-overload-implementation` is enabled by default
